SystemUI: Smart Pixels [1/2]
Disables a percentage of pixels on screen to reduce power consumption.
If enabled with battery saver, don't scale brightness at 0.5f for UX.

Includes:
 - Option to enable on battery saver
 - User chosen grid
 - Burn-in protection

Change-Id: Id3c78548cb090ab2da11f543da31c5a408fb9fe9
Signed-off-by: Joe Maples <joe@frap129.org>
Signed-off-by: mydongistiny <jaysonedson@gmail.com>
(cherry picked from commit 396aca13d3a3bea0c1bce7942ddb91a1b4a2ec27)

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -95,4 +95,9 @@
     <bool name="config_needCustomFODView">false</bool>
 
     <bool name="config_usesOnePlusFOD">false</bool>
+
+    <!-- Whether the device supports Smart Pixels
+         Disable if it doesn't -->
+    <bool name="config_enableSmartPixels">false</bool>
+
 </resources>
